# my

./: .gitignore  arch.sh  baseline.sh  debian.sh  gitssh.yml  ubuntu.sh  yggdrasil.yml  zsh.sh
alacritty/: alacritty.toml  alacritty.yml
arch/: install.sh
awesome/: check_updates.sh  rc.lua  theme.lua  toogle_keyboard_layout.sh  wifi_signal.sh
awesome/config/: init.lua  keybinds.lua  nord.lua  widgets.lua
awesome/theme/: init.lua  keybinds.lua  widgets.lua
awesome/widgets/: init.lua
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/cmd/: mod.rs
cli/src/cmd/calendar/: handler.rs  mod.rs
cli/src/cmd/config/: handler.rs  mod.rs
cli/src/cmd/github/: handler.rs  mod.rs
cli/src/cmd/task/: handler.rs  mod.rs
cli/src/config/: mod.rs  service.rs
cli/src/notion/: client.rs  mod.rs  model.rs  service.rs
ghostty/: config
nvim/: coc-settings.json  lazy-lock.json
nvim/lua/: autoload_packer.lua  config.lua  plugins.lua
nvim/plugin/: packer_compiled.lua
oh_my_zsh/: .zshrc
picom/: picom.conf
qtile/custom_widgets/: volume.py
rofi/: config.rasi  config.rasi.doc
rofi/themes/: nord.rasi
tmux/: starttmux.sh  tmux.conf
ubuntu/: alacritty.sh  asdf.sh  awesome.sh  betterlockscreen.sh  direnv.sh  docker.sh  install.sh  nerd_font.sh  nerd_fonts.sh  nvim.sh  rust.sh  taskwarrior.sh  tmux.sh  zsh.sh
vars/: external_vars.yml  ssh_vars.yml
wezterm/: keybinds.lua  plugins.lua  wezterm.lua
xmonad/: xmonad.hs
xmonad/xmobar/: xmobar.config
yggui/: .gitignore  Cargo.toml
yggui/src/: main.rs  widgets.rs
zsh/: .zshrc
(+89 files in other folders)
